Minor css fixes.
* Horizontal scrollbar does not appear anymore. hidden overflow.
* Credits disappear on small screen.

--- a/public/public-Macaulay2/mathProgram.css
+++ b/public/public-Macaulay2/mathProgram.css
@@ -2,7 +2,8 @@
 
 html {
     height: 100%;
-
+   width: 100%;
+   overflow: hidden;
 }
 
 #tutorial, #menuTutorial {
@@ -132,6 +133,12 @@ body {
     bottom: 0;
     width: 100%;
     height: 20px;
+}
+
+@media (max-height:600px){
+    #about {
+        display:none;
+    }
 }
 
 code {
